# Libgen_2.0

./: .gitignore  EAD_lib.ipynb  EAD_library_curation.ipynb  EAD_publication_figure_generation.ipynb  GT_alphapept_script.py  GT_curation_dev.ipynb  GT_library_curation_script.py  GT_std_list_prep.ipynb  ISF_finder.ipynb  README.md  UVPD_library_curation.ipynb  alphapept_development.ipynb  alphapept_readall.py  alphapept_readall.spec  alphapept_readall_temp.py  alphapept_script_dev.ipynb  compound_annotation.ipynb  denoising_script.py  dipep.ipynb  elys_data.ipynb  find_features_alphapept_script.py  guess_adduct_core.ipynb  lcbinbase_csv_msp.ipynb  libgen_EAD.ipynb  library_comparision.ipynb  library_curation_script.py  lowess_fit.ipynb  playground.ipynb  project.toml  public_librarys.ipynb  pyproject.toml  requirements.txt  setup.py  std_list_sanity_check.ipynb  test.py  test.spec  test_pymzml.ipynb
R_script/: polygentic_tree.R
__pycache__/: test.f-6.py39.1.nbc  test.f-6.py39.nbi
alphapept/: feature_finding.py  find_features.py  load_mzml_data.py
data/: classyfire_20220627162530.csv
demo_data/: standard_list.csv
mimas/helper/: fileio.py  (+2 more)
spectral_entropy/: tools.py
toolsets/: API_gets.py  adduct_calculator.py  alphapept_helper.py  conversion_function.py  curation_tools.py  deduplication.py  denoising_related_functions.py  file_io.py  helpers.py  mass_recalibration.py  mass_to_formula.py  ms2_spectra_plotter.py  msms_search.py  msp_file.py  mzml_file.py  mzml_plot.py  precursor_matching.py  search.py  spectra_operations.py  spectra_plotter.py  std_list_prep.py
(+36 files in other folders)
