[project]
name = "Libgen_Demo"
version = "0.1.0"
authors = [
    { name = "Fanzhou Kong", email = "fzkong@ucdavis.edu" }
]
dependencies = [
	"numpy",
	"pandas",
	"seaborn",
	"tqdm",
	"ast",
	"requests",
	"molmass",
	"scipy"
]

[project.optional-dependencies]
dev = [
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
]

#build-backend = "flit_core.buildapi"
#requires = ["flit_core >=3.2,<4"]
